--- a/less/slider.less
+++ b/less/slider.less
@@ -27,6 +27,7 @@
 	&__wrapper {
 		width: 1180px;
 		margin: 0 auto;
+		text-align: center;
 
 		@media @tablet {
 			width: 748px;
@@ -39,17 +40,16 @@
 
 	&__text {
 		position: absolute;
-		bottom: 50%;
+		// bottom: 50%;
+		top: 50%;
 		left: 50%;
-		transform: translatey(150%);
+		transform: translatey(-50%);
+		text-align: left;
+		// transform: translatey(150%);
 
-		@media @tablet {
-			// width: 300px;
-		}
-
-		@media @mobile {
-			transform: translatey(130%);			
-		}
+		// @media @mobile {
+		// 	transform: translatey(130%);			
+		// }
 	}
 
 	&__upper-text {
@@ -106,10 +106,9 @@
 	}
 
 	&__button {
-		display: block;
+		display: inline-block;
 		font-family: SFUIMedium;
 		max-width: 170px;
-		margin: 0 auto;
 		padding: 25px 40px;
 		background-color: #ed383f;
 		font-size: 16px;
@@ -119,9 +118,14 @@
 		}
 
 		@media @mobile {
+			display: inline-block;
 			padding: 8px 10px;
 			max-width: 120px;
 		}
+	}
+
+	&__button--centered {
+		margin: 0 auto;
 	}
 
 	&__form-bg {
@@ -206,6 +210,7 @@
 	text-align: center;
 
 	@media @mobile {
+		width: 100%;
 		margin-bottom: 5%;
 	}
 
@@ -218,7 +223,7 @@
 		font-size: 175px;
 
 		@media @tablet {
-			font-size: 90px;
+			font-size: 80px;
 		}
 
 		@media @mobile {
@@ -240,9 +245,17 @@
 
 	&__third-line {
 		font-size: 21px;
+		margin-bottom: 15px;
 
 		@media @tablet {
+		margin-bottom: 10px;
 			font-size: 16px;
 		}
+	}
+
+	&__link {
+		display: inline-block;
+
+		border-bottom: 1px dashed #fff;
 	}
 }
