fixes & updates again

--- a/less/games.less
+++ b/less/games.less
@@ -84,18 +84,27 @@
 	&__item {
 		font-size: 14px;
 		line-height: 28px;
-		color: #c7c7c7;
-
-		a {
-			color: #c7c7c7;
-			transition: 0.1s;
-		}
 
 		&:hover {
 
 			a {
 				color: #fff;
 			}
+		}	
+
+		a {
+			color: #c7c7c7;
+			transition: 0.1s;
+		}
+	}
+
+	&__item--support {
+		color: #c7c7c7;
+		transition: 0.1s;
+		cursor: pointer;
+
+		&:hover {			
+			color: #fff;
 		}
 	}
 
