--- a/less/slider.less
+++ b/less/slider.less
@@ -91,7 +91,7 @@
 
 		@media @tablet {
 			.slide__button {
-				padding: 20px;
+				padding: 15px;
 				bottom: 10px;
 			}
 		}
@@ -117,9 +117,13 @@
 			background-color: #de3137;
 		}
 
+		@media @tablet {
+			padding: 15px;
+		}
+
 		@media @mobile {
 			display: inline-block;
-			padding: 8px 10px;
+			padding: 10px;
 			max-width: 120px;
 		}
 	}
