--- a/css/style.css
+++ b/css/style.css
@@ -534,17 +534,21 @@ form * {
 .tab__variants-wrapper {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
   width: 100%;
 }
 .tab__variant {
-  width: calc(25% - 15px);
+  display: block;
+  width: 280px;
   height: 160px;
+  margin-right: 20px;
   background-color: #313131;
   margin-bottom: 20px;
 }
-.tab__variant:last-of-type {
+.tab__variant:last-child {
   display: none;
+}
+.tab__variant:nth-child(4n) {
+  margin-right: 0;
 }
 .tab__more-button {
   display: block;
@@ -707,17 +711,20 @@ form * {
 }
 .games-preview {
   display: flex;
-  justify-content: space-between;
   flex-wrap: wrap;
   width: 100%;
 }
 .games-preview__item {
-  width: calc(25% - 15px);
+  width: 280px;
   height: 155px;
+  margin-right: 20px;
   margin-bottom: 20px;
   background-color: #313131;
 }
-.games-preview__item:last-of-type {
+.games-preview__item:nth-of-type(4n) {
+  margin-right: 0;
+}
+.games-preview__item:last-child {
   display: none;
 }
 .deposites {
@@ -801,13 +808,20 @@ form * {
 .games__item {
   font-size: 14px;
   line-height: 28px;
-  color: #c7c7c7;
+}
+.games__item:hover a {
+  color: #fff;
 }
 .games__item a {
   color: #c7c7c7;
   transition: 0.1s;
 }
-.games__item:hover a {
+.games__item--support {
+  color: #c7c7c7;
+  transition: 0.1s;
+  cursor: pointer;
+}
+.games__item--support:hover {
   color: #fff;
 }
 .games__social {
@@ -1317,26 +1331,30 @@ form * {
   line-height: 27px;
 }
 .news {
+  display: flex;
   position: relative;
-  max-width: 385px;
-  height: 275px;
-  margin-bottom: 20px;
+  width: 385px;
+  height: 285px;
+  margin-bottom: 15px;
   background-size: cover;
 }
 .news__photo {
   width: 100%;
 }
-.news__header-wrapper {
+.news__text-wrapper {
   position: absolute;
+  left: 0;
   top: 0;
   width: 100%;
+  height: 100%;
+  text-align: center;
+}
+.news__header-wrapper {
+  display: flex;
+  align-items: center;
   height: calc(100% - 50px);
 }
 .news__header {
-  position: absolute;
-  top: 50%;
-  margin: 0 auto;
-  transform: translatey(-50%);
   font-size: 18px;
   line-height: 31px;
   text-transform: uppercase;
@@ -3283,7 +3301,7 @@ form * {
   }
   .main-nav__item--active .main-nav__dropdown-item a {
     height: auto;
-    padding: 20px;
+    padding: 15px;
     font-size: 16px;
   }
   .main-nav__item--arrow span {
@@ -3306,8 +3324,11 @@ form * {
     font-size: 40px;
   }
   .slide__button-wrapper .slide__button {
-    padding: 20px;
+    padding: 15px;
     bottom: 10px;
+  }
+  .slide__button {
+    padding: 15px;
   }
   .slide__form-bg {
     width: calc(50% + 100px);
@@ -3354,9 +3375,17 @@ form * {
     display: none;
   }
   .tab__variant {
-    width: calc(33.33% - 12px);
+    width: 240px;
+    margin-right: 14px;
+    margin-bottom: 15px;
   }
-  .tab__variant:last-of-type {
+  .tab__variant:nth-child(3n) {
+    margin-right: 0;
+  }
+  .tab__variant:nth-child(4n) {
+    margin-right: 14px;
+  }
+  .tab__variant:last-child {
     display: inline-block;
   }
   .jackpot__wrapper {
@@ -3378,9 +3407,17 @@ form * {
     width: 748px;
   }
   .games-preview__item {
-    width: calc(33.33% - 12px);
+    width: 240px;
+    margin-right: 14px;
+    margin-bottom: 15px;
   }
-  .games-preview__item:last-of-type {
+  .games-preview__item:nth-of-type(3n) {
+    margin-right: 0;
+  }
+  .games-preview__item:nth-of-type(4n) {
+    margin-right: 14px;
+  }
+  .games-preview__item:last-child {
     display: inline-block;
   }
   .deposites__wrapper {
@@ -3434,6 +3471,7 @@ form * {
   }
   .news {
     width: 365px;
+    margin-bottom: 20px;
   }
   .blog-slider__wrapper {
     width: 748px;
@@ -3742,7 +3780,7 @@ form * {
   }
   .slide__button {
     display: inline-block;
-    padding: 8px 10px;
+    padding: 10px;
     max-width: 120px;
   }
   .slide__form-bg {
@@ -3774,6 +3812,7 @@ form * {
   }
   .tab__variant {
     width: 100%;
+    margin-right: 0;
   }
   .tab__variant:nth-of-type(4),
   .tab__variant:nth-of-type(5),
@@ -3833,6 +3872,7 @@ form * {
   }
   .games-preview__item {
     width: 100%;
+    margin-right: 0;
   }
   .games-preview__item:nth-of-type(4),
   .games-preview__item:nth-of-type(5),
@@ -4003,7 +4043,7 @@ form * {
   .news {
     max-width: none;
     width: 100%;
-    height: auto;
+    height: 70vw;
   }
   .blog-slider__wrapper {
     width: 100%;
@@ -4201,7 +4241,7 @@ form * {
     font-size: 40px;
   }
   .greeting-bonus__button {
-    width: 100%;
+    max-width: 100%;
   }
   .deposit {
     width: auto;
@@ -4236,7 +4276,7 @@ form * {
     padding-left: 10px;
   }
   .bonus-more__button {
-    width: 100%;
+    max-width: 100%;
   }
   .social-enter__text {
     font-size: 12px;
