--- a/less/blog.less
+++ b/less/blog.less
@@ -64,38 +64,44 @@
 }
 
 .news {
+	display: flex;
 	position: relative;
-	max-width: 385px;
-	height: 275px;
-	margin-bottom: 20px;
+	width: 385px;
+	height: 285px;
+	margin-bottom: 15px;
 	background-size: cover;
 
 	@media @tablet {
 		width: 365px;
+		margin-bottom: 20px;
 	}
 
 	@media @mobile {
 		max-width: none;
 		width: 100%;
-		height: auto;
+		height: 70vw;
 	}
 
 	&__photo {
 		width: 100%;
 	}
 
-	&__header-wrapper {
+	&__text-wrapper {
 		position: absolute;
+		left: 0;
 		top: 0;
 		width: 100%;
+		height: 100%;
+		text-align: center;
+	}
+
+	&__header-wrapper {
+		display: flex;
+		align-items: center;
 		height: ~"calc(100% - 50px)";
 	}
 
 	&__header {
-		position: absolute;
-		top: 50%;
-		margin: 0 auto;
-		transform: translatey(-50%);
 		font-size: 18px;
 		line-height: 31px;
 		text-transform: uppercase;
