--- a/less/popular-games.less
+++ b/less/popular-games.less
@@ -55,30 +55,46 @@
 
 .games-preview {
 	display: flex;
-	justify-content: space-between;
 	flex-wrap: wrap;
+	// justify-content: space-between;
 	width: 100%;
 
 	&__item {
-		width: ~"calc(25% - 15px)";
+		width: 280px;
 		height: 155px;
+		margin-right: 20px;
 		margin-bottom: 20px;
 		background-color: #313131;
 
-		&:last-of-type {
+		&:nth-of-type(4n) {
+			margin-right: 0;
+		}
+
+		&:last-child {
 			display: none;
 		}
 
 		@media @tablet {
-			width: ~"calc(33.33% - 12px)";
+			width: 240px;
+			margin-right: 14px;
+			margin-bottom: 15px;
 
-			&:last-of-type {
+			&:nth-of-type(3n) {
+				margin-right: 0;
+			}
+
+			&:nth-of-type(4n) {
+				margin-right: 14px;
+			}
+
+			&:last-child {
 				display: inline-block;
 			}
 		}
 
 		@media @mobile {
 			width: 100%;
+			margin-right: 0;
 
 			&:nth-of-type(4),
 			&:nth-of-type(5),
