--- a/less/deposites.less
+++ b/less/deposites.less
@@ -1,5 +1,6 @@
 .deposites {
 	background-image: url('../img/bg-deposites.png');
+	background-size: cover;
 	background-position: bottom;
 
 	&__wrapper {
