--- a/less/header.less
+++ b/less/header.less
@@ -274,6 +274,12 @@
 			&:hover {
 				background-color: #090909;
 			}
+
+			@media @tablet {
+				&:hover {
+					background-color: #161616;
+				}
+			}
 		}
 
 		span {
@@ -292,6 +298,10 @@
 				display: block;
 				padding-top: 20px;
 				padding-bottom: 20px;
+
+				&:hover {
+					background-color: #161616;
+				}
 			}
 
 			span {
