everyweek bonus page (desktop)

--- a/less/style.less
+++ b/less/style.less
@@ -30,3 +30,6 @@
 @import "social-enter.less";
 @import "day-slot.less";
 @import "free-spins.less";
+@import "timer.less";
+@import "deposit-condition.less";
+@import "everyweek-cashback.less";
