--- a/css/style.css
+++ b/css/style.css
@@ -2745,33 +2745,6 @@ form * {
 .deposit--third {
   background-image: url('../img/coins-many.png');
 }
-.deposit-condition {
-  position: relative;
-  width: 33.33%;
-  padding-top: 70px;
-  margin-bottom: 120px;
-}
-.deposit-condition::before {
-  content: '';
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 1px;
-  height: 50px;
-  background-color: #fff;
-}
-.deposit-condition__count {
-  display: block;
-  margin-bottom: 10px;
-  font-size: 25px;
-  font-family: SFUIHeavy;
-}
-.deposit-condition__description {
-  display: block;
-  max-width: 250px;
-  font-size: 16px;
-  font-family: SFUIMedium;
-}
 .cashback {
   background-color: #212121;
 }
@@ -2985,37 +2958,6 @@ form * {
 .half-cashback__button-details:hover {
   background-color: #6ab980;
 }
-.timer {
-  width: 100%;
-}
-.timer__wrapper {
-  display: flex;
-  justify-content: space-between;
-  width: 500px;
-  margin: 0 auto;
-  margin-bottom: 75px;
-  text-align: center;
-}
-.timer__numbers-wrapper {
-  width: 100px;
-}
-.timer__numbers {
-  display: block;
-  font-size: 80px;
-  line-height: 80px;
-  text-align: center;
-  font-family: SFUIBold;
-}
-.timer__separator {
-  font-size: 80px;
-  line-height: 80px;
-  font-family: SFUILight;
-}
-.timer__numbers-text {
-  display: block;
-  font-size: 18px;
-  font-family: SFUIRegular;
-}
 .cashback-games__wrapper {
   width: 980px;
   padding-bottom: 120px;
@@ -3196,6 +3138,191 @@ form * {
   line-height: 25px;
   color: #cccccc;
   text-align: center;
+}
+.timer {
+  width: 100%;
+}
+.timer__wrapper {
+  display: flex;
+  justify-content: space-between;
+  width: 500px;
+  margin: 0 auto;
+  margin-bottom: 75px;
+  text-align: center;
+}
+.timer__numbers-wrapper {
+  width: 100px;
+}
+.timer__numbers {
+  display: block;
+  font-size: 80px;
+  line-height: 80px;
+  text-align: center;
+  font-family: SFUIBold;
+}
+.timer__separator {
+  font-size: 80px;
+  line-height: 80px;
+  font-family: SFUILight;
+}
+.timer__numbers-text {
+  display: block;
+  font-size: 18px;
+  font-family: SFUIRegular;
+}
+.timer--everyweek {
+  width: 450px;
+}
+.timer--everyweek .timer__wrapper {
+  width: 100%;
+}
+.timer--everyweek .timer__numbers {
+  font-size: 48px;
+  line-height: 48px;
+}
+.timer--everyweek .timer__separator {
+  font-size: 48px;
+  line-height: 48px;
+}
+.timer--everyweek .timer__numbers-text {
+  font-size: 14px;
+  line-height: 14px;
+}
+.deposit-conditions__wrapper {
+  display: flex;
+  width: 1180px;
+  margin: 0 auto;
+  padding: 35px;
+}
+.deposit-condition {
+  position: relative;
+  width: 33.33%;
+  padding-top: 70px;
+  margin-bottom: 120px;
+}
+.deposit-condition::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 1px;
+  height: 50px;
+  background-color: #fff;
+}
+.deposit-condition__count {
+  display: block;
+  margin-bottom: 10px;
+  font-size: 25px;
+  font-family: SFUIHeavy;
+}
+.deposit-condition__description {
+  display: block;
+  max-width: 250px;
+  font-size: 16px;
+  font-family: SFUIMedium;
+}
+.everyweek-cashback {
+  background-image: url('../img/money-bg-3.png');
+  background-size: cover;
+  background-position: top;
+}
+.everyweek-cashback__wrapper {
+  position: relative;
+  width: 1180px;
+  margin: 0 auto;
+  padding-top: 240px;
+  padding-bottom: 50px;
+  text-align: center;
+}
+.everyweek-cashback__header {
+  position: relative;
+  z-index: 1;
+  margin-bottom: 70px;
+  font-size: 36px;
+  text-transform: uppercase;
+  font-family: SFUIHeavy;
+}
+.everyweek-cashback__back-text {
+  position: absolute;
+  z-index: 0;
+  top: 190px;
+  left: 50%;
+  transform: translatex(-50%);
+  font-size: 120px;
+  color: #212121;
+  text-transform: uppercase;
+}
+.everyweek-cashback__text {
+  margin-bottom: 65px;
+  font-size: 18px;
+  line-height: 36px;
+}
+.everyweek-cashback__condition {
+  display: inline-block;
+  padding: 20px;
+  background-color: #333333;
+}
+.places {
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 70px;
+}
+.places__item {
+  width: 320px;
+  padding-top: 40px;
+  padding-bottom: 20px;
+  background-position: center;
+}
+.places__item--second {
+  background-image: url('../img/second-place.png');
+}
+.places__item--first {
+  background-image: url('../img/first-place.png');
+}
+.places__item--third {
+  background-image: url('../img/third-place.png');
+}
+.places__header {
+  font-size: 60px;
+}
+.places__bottom-text {
+  font-size: 18px;
+}
+.broadcast {
+  background-color: #1a1a1a;
+}
+.broadcast__wrapper {
+  display: flex;
+  width: 1180px;
+  margin: 0 auto;
+  padding: 80px 0;
+}
+.broadcast__text-wrapper {
+  width: 100%;
+}
+.broadcast__header {
+  width: 540px;
+  margin-bottom: 40px;
+  font-size: 20px;
+  line-height: 37px;
+  font-family: SFUIBold;
+  text-transform: uppercase;
+}
+.broadcast__image-wrapper {
+  flex-shrink: 0;
+  width: 580px;
+  height: 330px;
+  background-color: #141414;
+}
+.broadcast__button {
+  width: 345px;
+  padding: 25px;
+  background-color: #6ab980;
+  font-family: SFUIBold;
+  font-size: 16px;
+}
+.broadcast__button:hover {
+  background-color: #589f6c;
 }
 @media (min-width: 788px) {
   .main-wrapper {
@@ -3644,12 +3771,6 @@ form * {
     width: 50%;
     margin-bottom: 50px;
   }
-  .deposit-condition {
-    width: 25%;
-    margin-bottom: 60px;
-    padding-top: 0;
-    padding-left: 10px;
-  }
   .cashback__wrapper {
     width: 748px;
   }
@@ -3695,6 +3816,12 @@ form * {
   }
   .statistics__text-wrapper {
     width: 100%;
+  }
+  .deposit-condition {
+    width: 25%;
+    margin-bottom: 60px;
+    padding-top: 0;
+    padding-left: 10px;
   }
 }
 @media (max-width: 788px) {
@@ -4260,13 +4387,6 @@ form * {
   .deposit__number {
     font-size: 20px;
   }
-  .deposit-condition {
-    width: 100%;
-    text-align: center;
-  }
-  .deposit-condition__description {
-    max-width: none;
-  }
   .cashback__wrapper {
     width: 100%;
     background-position: 20px 40px;
@@ -4326,22 +4446,6 @@ form * {
   }
   .half-cashback__button-details {
     max-width: 100%;
-  }
-  .timer__wrapper {
-    width: 100%;
-    max-width: 300px;
-    margin-bottom: 40px;
-  }
-  .timer__numbers {
-    font-size: 40px;
-    line-height: 40px;
-  }
-  .timer__separator {
-    font-size: 40px;
-    line-height: 40px;
-  }
-  .timer__numbers-text {
-    font-size: 14px;
   }
   .cashback-games__wrapper {
     width: 100%;
@@ -4424,6 +4528,29 @@ form * {
   }
   .statistics__text {
     line-height: 20px;
+  }
+  .timer__wrapper {
+    width: 100%;
+    max-width: 300px;
+    margin-bottom: 40px;
+  }
+  .timer__numbers {
+    font-size: 40px;
+    line-height: 40px;
+  }
+  .timer__separator {
+    font-size: 40px;
+    line-height: 40px;
+  }
+  .timer__numbers-text {
+    font-size: 14px;
+  }
+  .deposit-condition {
+    width: 100%;
+    text-align: center;
+  }
+  .deposit-condition__description {
+    max-width: none;
   }
 }
 @media (max-width: 1220px) and (max-width: 1220px) {
