--- a/css/style.css
+++ b/css/style.css
@@ -3325,7 +3325,7 @@ form * {
   font-family: SFUIBold;
   text-transform: uppercase;
 }
-.broadcast__image-wrapper {
+.broadcast__video-wrapper {
   flex-shrink: 0;
   width: 580px;
   height: 330px;
@@ -3951,8 +3951,9 @@ form * {
   .broadcast__header {
     width: 100%;
   }
-  .broadcast__image-wrapper {
+  .broadcast__video-wrapper {
     width: 100%;
+    height: 470px;
   }
   .about__wrapper {
     width: 748px;
@@ -4749,8 +4750,8 @@ form * {
     font-size: 18px;
     line-height: 22px;
   }
-  .broadcast__image-wrapper {
-    height: 55vw;
+  .broadcast__video-wrapper {
+    height: 60vw;
   }
   .broadcast__button {
     max-width: 100%;
