--- a/less/everyweek-cashback.less
+++ b/less/everyweek-cashback.less
@@ -202,7 +202,7 @@
 		}
 	}
 
-	&__image-wrapper {
+	&__video-wrapper {
 		flex-shrink: 0;
 		width: 580px;
 		height: 330px;
@@ -210,10 +210,11 @@
 
 		@media @tablet {
 			width: 100%;
+			height: 470px;
 		}
 
 		@media @mobile {
-			height: 55vw;
+			height: 60vw;
 		}
 	}
 
