modals for recovery password

--- a/less/style.less
+++ b/less/style.less
@@ -18,16 +18,13 @@
 @import "advantages.less";
 @import "incomes.less";
 @import "prize.less";
-@import "modal-registration.less";
-@import "modal-enter.less";
-@import "modal-contact.less";
+@import "modals.less";
 @import "error.less";
 @import "registration-form-mini.less";
 @import "registration.less";
 @import "greeting-bonus.less";
 @import "cashback.less";
 @import "bonus-more.less";
-@import "social-enter.less";
 @import "day-slot.less";
 @import "free-spins.less";
 @import "timer.less";
