--- a/less/modals.less
+++ b/less/modals.less
@@ -1,20 +1,15 @@
-.modal-registration {
+.modal {
 	display: flex;
 	flex-direction: row-reverse;
 	position: fixed;
 	z-index: 101;
 	top: -1000px;
 	left: 50%;
-	width: 945px;
 	padding: 20px;
 	background-image: url('../img/reg-bg.jpg');
 	background-size: cover;
 	transform: translate(-50%, -50%);
 	transition: 0.6s;
-
-	@media @tablet {
-		width: 700px;
-	}
 
 	@media @mobile {
 		width: ~"calc(100% - 20px)";
@@ -22,14 +17,6 @@
 
 	&__character-wrapper {
 		position: absolute;
-		left: -35px;
-		top: -8px;
-		width: 400px;
-
-		@media @tablet {
-			top: 210px;
-			width: 200px;
-		}
 
 		@media @mobile {
 			display: none;
@@ -86,16 +73,77 @@
 	}
 }
 
-.registration-form {
+.modal--registration {
+	width: 945px;
+
+	@media @tablet {
+		width: 700px;
+	}
+
+	.modal__character-wrapper {
+		left: -35px;
+		top: -8px;
+		width: 400px;
+
+		@media @tablet {
+			top: 210px;
+			width: 200px;
+		}
+	}
+}
+
+.modal--enter {	
+	width: 735px;
+
+	@media @tablet {
+		width: 550px;
+	}
+
+	.modal__character-wrapper {
+		position: absolute;
+		left: -42px;
+		top: 12px;
+		width: 380px;
+
+		@media @tablet {
+			top: 180px;
+			left: -20px;
+			width: 200px;
+		}
+	}
+}
+
+.modal--contact {	
+	width: 800px;
+
+	@media @tablet {
+		width: 600px;
+	}
+
+	.modal__character-wrapper {
+		position: absolute;
+		z-index: -1;
+		left: -48px;
+		top: -17px;
+		width: 390px;
+
+		@media @tablet {
+			width: 220px;
+			top: 150px;
+			left: -10px;
+		}
+	}
+}
+
+.modal--recovery,
+.modal--new-password {
+	width: 500px;	
+}
+
+.modal-form {
 	display: flex;
 	justify-content: space-between;
 	flex-wrap: wrap;
-	width: 560px;
-	margin-top: 20px;
-
-	@media @tablet {
-		width: 500px;
-	}
 
 	@media @mobile {
 		width: 100%;
@@ -103,6 +151,7 @@
 
 	&__header {
 		width: 100%;
+		margin-top: 20px;
 		margin-bottom: 40px;
 		font-size: 25px;
 		text-transform: uppercase;
@@ -113,7 +162,16 @@
 		}
 	}
 
-	input {
+	&__text {
+		margin-bottom: 20px;
+	}
+
+	&__input {
+		height: 45px;
+		margin-bottom: 20px;
+		padding: 0 13px;
+		border: none;
+		background-color: #fff;
 		font-family: SFUIRegular;
 		font-size: 14px;
 		color: #000;
@@ -122,33 +180,25 @@
 			font-family: SFUIRegular;
 			color: #999999;
 		}
-	}
-
-	input[type=submit] {
-		color: #fff;
-	}
-
-	&__name, 
-	&__nickname,
-	&__password,
-	&__password-confirm,
-	&__code {
-		width: 270px;
-		height: 45px;
-		margin-bottom: 20px;
-		padding: 0 13px;
-		border: none;
-		background-color: #fff;
-
-		@media @tablet {
-			width: 240px;
-		}
 
 		@media @mobile {
 			width: 100%;
 			height: 30px;
 			margin-bottom: 15px;
 		}
+	}
+
+	&__text-field {
+		height: 120px;
+		margin-bottom: 20px;
+		padding: 17px 13px;
+		border: none;
+		background-color: #fff;
+		font-family: SFUIRegular;
+		font-size: 14px;
+		color: #000;
+		resize: none;
+		overflow: hidden;
 	}
 
 	&__currency {
@@ -173,7 +223,7 @@
 			padding-top: 0;
 			padding-bottom: 0;
 		}
-	}
+	}	
 
 	&__label-checkbox {
 		display: inline-block;
@@ -234,6 +284,30 @@
 		&:hover {
 			background-color: #de3137;
 		}
+	}
+
+	&__forgot-pass {
+		display: block;
+		margin: 0 auto;
+		background-color: transparent;
+		color: #d9d9d9;
+		font-size: 14px;
+		text-decoration: underline;
+		transition: 0.1s;
+		font-family: SFUIRegular;
+		cursor: pointer;
+
+		&:hover {
+			color: #fff;
+		}
+	}
+
+	&__not-recieve,
+	&__support {
+		display: inline-block;
+		cursor: pointer;
+		transitin: 0.1s;
+		text-decoration: underline;
 	}
 
 	.jq-selectbox,
@@ -363,6 +437,67 @@
 	}
 }
 
+.modal-form--registration {
+	width: 560px;
+
+	@media @tablet {
+		width: 500px;
+	}
+
+	.modal-form__input {
+		width: 270px;
+
+		@media @tablet {
+			width: 240px;
+		}
+
+		@media @mobile {
+			width: 100%;
+		}
+	}
+}
+
+.modal-form--enter {	
+	width: 350px;
+
+	.modal-form__input {
+		width: 100%;
+	}
+
+	.modal-form__button {
+		margin-bottom: 20px;
+	}
+}
+
+.modal-form--contact {
+	width: 460px;
+
+	@media @tablet {
+		width: 350px;
+	}
+
+	@media @mobile {
+		width: 100%;
+	}
+
+	.modal-form__input,
+	.modal-form__text-field {
+		width: 100%;
+	}
+}
+
+.modal-form--recovery,
+.modal-form--new-password {
+
+	.modal-form__input {
+		width: 100%;
+	}
+
+	.modal-form__button {
+		margin-bottom: 20px;
+	}
+}
+
 .modal-bg {
 	position: fixed;
 	z-index: -1;
@@ -372,4 +507,54 @@
 	height: 100%;
 	background-color: #000;
 	opacity: 0;
+}
+
+.social-enter {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	width: 100%;
+	margin-bottom: 25px;
+	padding: 12px;
+	border: 1px solid #5d5d5d;
+
+	&__text {
+		display: block;
+		font-size: 14px;
+		color: #d9d9d9;
+
+		@media @mobile {
+			font-size: 12px;
+		}
+	}
+
+	&__socials {
+		display: flex;
+		justify-content: space-between;
+		width: 94px;
+		height: 26px;
+	}
+
+	&__soc {
+		width: 26px;
+		height: 26px;
+		background-size: 100%;
+	}
+
+	&__soc--fb {		
+		background-image: url('../img/social-icons/facebook.png');
+	}
+
+	&__soc--vk {		
+		background-image: url('../img/social-icons/vk.png');
+	}
+
+	&__soc--tw {		
+		background-image: url('../img/social-icons/twitter.png');
+	}
+}
+
+.social-enter--reg {
+	background-color: rgba(60, 60, 60, 0.5);
+	border: none;
 }
