--- a/less/greeting-bonus.less
+++ b/less/greeting-bonus.less
@@ -95,6 +95,7 @@
 	}
 
 	&__number {
+		display: block;
 		font-family: SFUIThin;
 		font-size: 25px;
 		text-transform: uppercase;
@@ -102,6 +103,12 @@
 		@media @mobile {
 			font-size: 20px
 		}
+	}
+
+	&__undertext {
+		display: block;
+		font-family: SFUIThin;
+		font-size: 15px;		
 	}
 }
 
