--- a/less/main.less
+++ b/less/main.less
@@ -1,5 +1,4 @@
 body {
-	background-color: #232323;
 	color: #fff;
 	font-family: SFUIRegular;
 	overflow-x: hidden;
@@ -36,6 +35,10 @@ form {
 
 .main-wrapper {
 	margin-top: 60px;
+	padding-bottom: 50px;
+	background-image: url('../img/main-bg.jpg');
+	background-repeat: repeat;
+	background-color: #232323;
 
 	@media (min-width: 788px) {
 		margin-top: 77px;
