--- a/less/free-spins.less
+++ b/less/free-spins.less
@@ -39,6 +39,7 @@
 
 		@media @mobile {
 			.mobile-wrap;
+			text-align: center;
 		}
 	}
 
@@ -81,10 +82,10 @@
 	&__button {
 		display: inline-block;
 		margin-top: 30px;
-		padding: 30px 65px;
+		padding: 20px;
 		background-color: #ed383f;
-		font-family: SFUIBold;
-		font-size: 18px;
+		font-family: SFUIMedium;
+		font-size: 16px;
 
 		&:hover {
 			background-color: #de3137;
@@ -92,7 +93,7 @@
 
 		@media @mobile {
 			max-width: 100%;
-			padding: 15px 20px;
+		width: 280px;
 		}
 	}
 
