--- a/less/style.less
+++ b/less/style.less
@@ -28,7 +28,7 @@
 @import "day-slot.less";
 @import "free-spins.less";
 @import "timer.less";
-@import "deposit-condition.less";
+@import "condition.less";
 @import "everyweek-cashback.less";
 @import "about.less";
 @import "reload-bonus.less";
