--- a/less/popular-games.less
+++ b/less/popular-games.less
@@ -56,8 +56,11 @@
 .games-preview {
 	display: flex;
 	flex-wrap: wrap;
-	// justify-content: space-between;
 	width: 100%;
+
+	@media @mobile {
+	justify-content: space-between;	
+	}
 
 	&__item {
 		width: 280px;
@@ -93,10 +96,10 @@
 		}
 
 		@media @mobile {
-			width: 100%;
+			width: ~"calc(50% - 10px)";
 			margin-right: 0;
+			margin-bottom: 25px;
 
-			&:nth-of-type(4),
 			&:nth-of-type(5),
 			&:nth-of-type(6),
 			&:nth-of-type(7),
@@ -104,6 +107,14 @@
 			&:nth-of-type(9) {
 				display: none;
 			}
+
+			&:nth-of-type(4n) {
+				margin-right: 0;
+			}
+		}
+
+		@media (max-width: 550px) {
+			width: 100%;
 		}
 	}
 }
