--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,25 @@ form * {
   background-size: 100% auto;
   background-color: #0b0b12;
 }
+.buttons-level__wrapper {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  width: 1180px;
+  margin: 0 auto;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+.buttons-level__button {
+  width: 30%;
+  padding: 20px;
+  background-color: #ed383f;
+  font-family: SFUIBold;
+  font-size: 18px;
+}
+.buttons-level__button:hover {
+  background-color: #de3137;
+}
 .header {
   position: fixed;
   z-index: 100;
@@ -3364,6 +3383,26 @@ form * {
 .level__image {
   width: 100%;
 }
+.level-modal {
+  position: fixed;
+  z-index: 101;
+  left: 50%;
+  top: -1000px;
+  width: 840px;
+  background-color: rgba(0, 0, 0, 0.2);
+  transform: translate(-50%, -50%);
+  transition: 0.6s;
+}
+.level-modal-bg {
+  position: fixed;
+  z-index: 100;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #2e2e2e;
+  opacity: 0;
+}
 @media (min-width: 788px) {
   .main-wrapper {
     margin-top: 77px;
@@ -3389,6 +3428,12 @@ form * {
   }
 }
 @media (max-width: 1220px) {
+  .buttons-level__wrapper {
+    width: 748px;
+  }
+  .buttons-level__button {
+    margin-bottom: 10px;
+  }
   .header__wrapper {
     width: 748px;
   }
@@ -3617,6 +3662,7 @@ form * {
   }
   .games__column {
     margin-right: 0;
+    width: 33.33%;
   }
   .games__social {
     width: 100%;
@@ -3943,6 +3989,11 @@ form * {
   }
 }
 @media (max-width: 788px) {
+  .buttons-level__wrapper {
+    width: 100%;
+    padding-right: 10px;
+    padding-left: 10px;
+  }
   .header__wrapper {
     width: 100%;
     padding-right: 10px;
@@ -4062,17 +4113,23 @@ form * {
     padding-right: 10px;
     padding-left: 10px;
   }
-  .tab__variant {
-    width: 100%;
-    margin-right: 0;
+  .tab__variants-wrapper {
+    justify-content: space-between;
   }
-  .tab__variant:nth-of-type(4),
+  .tab__variant {
+    width: calc(50% - 10px);
+    margin-right: 0;
+    margin-bottom: 20px;
+  }
   .tab__variant:nth-of-type(5),
   .tab__variant:nth-of-type(6),
   .tab__variant:nth-of-type(7),
   .tab__variant:nth-of-type(8),
   .tab__variant:nth-of-type(9) {
     display: none;
+  }
+  .tab__variant:nth-child(4n) {
+    margin-right: 0;
   }
   .jackpot__wrapper {
     width: 100%;
@@ -4122,17 +4179,23 @@ form * {
     padding-right: 10px;
     padding-left: 10px;
   }
-  .games-preview__item {
-    width: 100%;
-    margin-right: 0;
+  .games-preview {
+    justify-content: space-between;
   }
-  .games-preview__item:nth-of-type(4),
+  .games-preview__item {
+    width: calc(50% - 10px);
+    margin-right: 0;
+    margin-bottom: 25px;
+  }
   .games-preview__item:nth-of-type(5),
   .games-preview__item:nth-of-type(6),
   .games-preview__item:nth-of-type(7),
   .games-preview__item:nth-of-type(8),
   .games-preview__item:nth-of-type(9) {
     display: none;
+  }
+  .games-preview__item:nth-of-type(4n) {
+    margin-right: 0;
   }
   .deposites__wrapper {
     width: 100%;
@@ -4776,6 +4839,23 @@ form * {
     width: calc(50% - 10px);
   }
 }
+@media (max-width: 550px) {
+  .buttons-level__button {
+    width: 100%;
+  }
+  .tab__variant {
+    width: 100%;
+  }
+  .games-preview__item {
+    width: 100%;
+  }
+  .condition--reload {
+    width: 100%;
+  }
+  .level {
+    width: 100%;
+  }
+}
 @media (max-width: 1220px) and (max-width: 1220px) {
   .main-nav__item--active .main-nav__dropdown {
     top: 0;
@@ -4803,13 +4883,5 @@ form * {
   }
   .statistics__column::after {
     display: none;
-  }
-}
-@media (max-width: 550px) {
-  .condition--reload {
-    width: 100%;
-  }
-  .level {
-    width: 100%;
   }
 }
